--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,11 @@ jobs:
           version: 9.1.2  # Specify the desired pnpm version
 
       - name: Install dependencies
+        working-directory: src
         run: pnpm install
 
       - name: Build Vite app
+        working-directory: src
         run: pnpm run build
 
       # - name: Deploy to GitHub Pages
