--- a/src/package.json
+++ b/src/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint eslint.config.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "eslint": "9.x",
+    "globals": "^15.3.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.11.0",
     "vite": "^5.2.0"
   },
   "dependencies": {
