--- a/src/package.json
+++ b/src/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint eslint.config.js"
   },
   "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "eslint": "9.x",
-    "globals": "^15.3.0",
-    "typescript": "^5.2.2",
-    "typescript-eslint": "^7.11.0",
-    "vite": "^5.2.0"
+    "@eslint/js": "^9.5.0",
+    "eslint": "~9.5.0",
+    "globals": "^15.6.0",
+    "phaser3-rex-plugins-types": "^0.2.0",
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1",
+    "vite": "^5.3.2"
   },
   "dependencies": {
     "phaser": "^3.80.1"
