--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,11 @@ jobs:
             pages: write
             id-token: write
 
-        steps:
-            - name: Checkout code
+        steps:  
+            - name: Checkout
               uses: actions/checkout@v4
+              with:
+                fetch-depth: 0
 
             - name: Set up Node.js
               uses: actions/setup-node@v4
