--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,22 @@
 name: Build & Deploy
 
+# on:
+#     push:
+#         tags:
+#             - "release/v_*"
 on:
-    push:
-        tags:
-            - "release/v_*"
+  push:
+    branches:
+      - main
 
 jobs:
     deploy:
         # runs-on: ubuntu-latest
         runs-on: self-hosted
 
-        permissions:
-            pages: write
-            id-token: write
-
         steps:  
             - name: Checkout
               uses: actions/checkout@v4
-              with:
-                fetch-depth: 0
 
             - name: Set up Node.js
               uses: actions/setup-node@v4
