--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,16 +5,20 @@ name: Build & Deploy
 #         tags:
 #             - "release/v_*"
 on:
-  push:
-    branches:
-      - main
+    push:
+        branches:
+            - main
 
 jobs:
     deploy:
         # runs-on: ubuntu-latest
         runs-on: self-hosted
 
-        steps:  
+        permissions:
+            pages: write
+            id-token: write
+
+        steps:
             - name: Checkout
               uses: actions/checkout@v4
 
