--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,20 @@ jobs:
               working-directory: src
               run: pnpm run build
 
-    deploy:
+    upload-artefacts:
         needs: build
+        # runs-on: ubuntu-latest
+        runs-on: self-hosted
+
+        steps:
+            - name: Archive release assets
+              uses: actions/upload-artifact@v4
+              with:
+                  name: checkers-artifacts
+                  path: dist
+
+    deploy:
+        needs: [build, upload-artefacts]
 
         # runs-on: ubuntu-latest
         runs-on: self-hosted
