--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,4 +67,5 @@ jobs:
             - name: Deploy to GitHub Pages
               uses: actions/deploy-pages@v4
               with:
+                  artifact_name: checkers-artifacts
                   token: ${{ secrets.GITHUB_TOKEN }}
