--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,10 @@ jobs:
         # runs-on: ubuntu-latest
         runs-on: self-hosted
 
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+
         permissions:
             contents: read
             pages: write
@@ -66,6 +70,7 @@ jobs:
         steps:
             - name: Deploy to GitHub Pages
               uses: actions/deploy-pages@v4
+              id: deployment
               with:
                   artifact_name: checkers-artifacts
                   token: ${{ secrets.GITHUB_TOKEN }}
