--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,7 @@ jobs:
             - name: Archive release assets
               uses: actions/upload-artifact@v4
               with:
+                  name: checkers-artifacts
                   path: src/dist
 
     deploy:
@@ -71,4 +72,5 @@ jobs:
               uses: actions/deploy-pages@v4
               id: deployment
               with:
+                  artifact_name: checkers-artifacts
                   token: ${{ secrets.GITHUB_TOKEN }}
