--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ on:
 
 jobs:
     build:
-        runs-on: ubuntu-latest
-        # runs-on: self-hosted
+        # runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         steps:
             - name: Checkout
@@ -42,22 +42,24 @@ jobs:
 
     upload-artefacts:
         needs: build
-
-        runs-on: ubuntu-latest
-        # runs-on: self-hosted
+        # runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         steps:
             - name: Setup Pages
               uses: actions/configure-pages@v5
-
+              
             - name: Archive release assets
-              uses: actions/upload-pages-artifact@v3
+              uses: actions/upload-artifact@v4
+              with:
+                  name: github-pages
+                  path: src/dist
 
     deploy:
         needs: [build, upload-artefacts]
 
-        runs-on: ubuntu-latest
-        # runs-on: self-hosted
+        # runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         environment:
             name: github-pages
@@ -73,4 +75,5 @@ jobs:
               uses: actions/deploy-pages@v4
               id: deployment
               with:
+                  artifact_name: github-pages
                   token: ${{ secrets.GITHUB_TOKEN }}
