--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,9 +51,9 @@ jobs:
 
             - name: Archive release assets
               uses: actions/upload-pages-artifact@v3
-              with:
-                  name: github-pages
-                  path: src/dist
+              # with:
+              #     name: github-pages
+              #     path: src/dist
 
     deploy:
         needs: [build, upload-artefacts]
