--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,11 +50,14 @@ jobs:
               uses: actions/configure-pages@v5
 
             - name: Archive release assets
-              uses: actions/upload-pages-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
+                  name: github-pages
+                  path: src/dist
+              # uses: actions/upload-pages-artifact@v3
+              # with:
               #     name: github-pages
               #     path: src/dist
-                    path: src
 
     deploy:
         needs: [build, upload-artefacts]
