--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ on:
 
 jobs:
     build:
-        runs-on: ubuntu-latest
-        # runs-on: self-hosted
+        # runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         steps:
             - name: Checkout
@@ -42,8 +42,8 @@ jobs:
 
     upload-artefacts:
         needs: build
-        runs-on: ubuntu-latest
-        # runs-on: self-hosted
+        # runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         steps:
             - name: Setup Pages
@@ -54,16 +54,12 @@ jobs:
               with:
                   name: github-pages
                   path: src/dist
-              # uses: actions/upload-pages-artifact@v3
-              # with:
-              #     name: github-pages
-              #     path: src/dist
 
     deploy:
         needs: [build, upload-artefacts]
 
-        runs-on: ubuntu-latest
-        # runs-on: self-hosted
+        # runs-on: ubuntu-latest
+        runs-on: self-hosted
 
         environment:
             name: github-pages
