--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
               uses: actions/configure-pages@v5
 
             - name: Archive release assets
-              uses: actions/upload-artifact@v4
+              uses: actions/upload-pages-artifact@v3
               with:
                   name: github-pages
                   path: src/dist
