--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,9 @@ jobs:
             - name: Setup Pages
               uses: actions/configure-pages@v5
 
+            - name: Install dependencies
+              run: npm install
+
             - name: Archive release assets
               uses: actions/upload-pages-artifact@v3
               with:
