--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,8 +49,8 @@ jobs:
             - name: Setup Pages
               uses: actions/configure-pages@v5
 
-            - name: Install dependencies
-              run: npm install
+            - name: Display path
+              run: pwd
 
             - name: Archive release assets
               uses: actions/upload-pages-artifact@v3
