--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
               uses: actions/upload-pages-artifact@v3
               with:
                   name: github-pages
+                  path: ./src/dist
 
     deploy:
         needs: [build, upload-artefacts]
