--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,23 +40,27 @@ jobs:
               working-directory: src
               run: pnpm run build:prod
 
-    upload-artefacts:
-        needs: build
-        runs-on: ubuntu-latest
-        # runs-on: self-hosted
-
-        steps:
-            - name: Setup Pages
-              uses: actions/configure-pages@v5
-
             - name: Archive release assets
               uses: actions/upload-pages-artifact@v3
-              # with:
-                  #     name: github-pages
-                  # path: .
+
+    # upload-artefacts:
+    #     needs: build
+    #     runs-on: ubuntu-latest
+    #     # runs-on: self-hosted
+
+    #     steps:
+    #         - name: Setup Pages
+    #           uses: actions/configure-pages@v5
+
+    #         - name: Archive release assets
+    #           uses: actions/upload-pages-artifact@v3
+    #           # with:
+    #           #     name: github-pages
+    #           # path: .
 
     deploy:
-        needs: [build, upload-artefacts]
+        needs: [build]
+        # needs: [build, upload-artefacts]
 
         runs-on: ubuntu-latest
         # runs-on: self-hosted
