--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
             - name: Install pnpm
               uses: pnpm/action-setup@v4
               with:
-                  version: 9.1.2 # Specify the desired pnpm version
+                  version: 9.4.0
 
             - name: Install dependencies
               working-directory: src
