--- a/src/package.json
+++ b/src/package.json
@@ -1,13 +1,14 @@
 {
   "name": "checkers",
   "private": true,
-  "version": "0.0.0",
+  "author": "Marcin Musiałek",
+  "license": "MIT",
+  "version": "0.0.9",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "build:prod": "tsc && vite build",
-    "build:prod2": "tsc && vite build --base=\"/checkers/\" --outDir ../_site -publicDir",
     "preview": "vite preview",
     "lint": "eslint eslint.config.js"
   },
